--- a/src/components/pages/options/app-options-page.css
+++ b/src/components/pages/options/app-options-page.css
@@ -1,26 +1,32 @@
-.app-home {
-  padding: 10px;
+.frame {
+  margin: 40px auto;
+  width: 100%;
+  min-width: 300px;
+  max-width: 900px;
 }
 
-button {
+.content {
+  min-height: 150px;
+  --padding-start: 20px;
+  --padding-end: 20px;
+  --padding-top: 20px;
+  --padding-bottom: 20px;
+}
+
+ion-card-header {
   background: #5851ff;
   color: white;
-  margin: 8px;
-  border: none;
-  font-size: 13px;
-  font-weight: 700;
-  text-transform: uppercase;
-  padding: 16px 20px;
-  border-radius: 2px;
-  box-shadow: 0 8px 16px rgba(0,0,0,.1), 0 3px 6px rgba(0,0,0,.08);
-  outline: 0;
-  letter-spacing: .04em;
-  transition: all .15s ease;
-  cursor: pointer;
+  height: 56px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
-  
-button:hover {
-  box-shadow: 0 3px 6px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.1);
-  transform: translateY(1px);
+
+h1 {
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: #fff;
+  padding: 0 12px;
 }
+
 
