--- a/projects/page-options/src/components/app/app.css
+++ b/projects/page-options/src/components/app/app.css
@@ -1,18 +1,27 @@
-.app {
-	text-align: center;
+.frame {
+	margin: 40px auto;
+	width: 100%;
+	min-width: 300px;
+	max-width: 900px;
 }
 
-.app p {
-	margin: 0.4rem;
+.content {
+	min-height: 150px;
+	padding: 20px;
 }
 
-.app-header {
-	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
+ion-card-header {
+	background: #5851ff;
 	color: white;
+	height: 56px;
+	display: flex;
+	align-items: center;
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+}
+
+h1 {
+	font-size: 1.4rem;
+	font-weight: 500;
+	color: #fff;
+	padding: 0 12px;
 }
